fixed stying in the coachform card preview - text was jumpin off the card if it was long

--- a/src/InterviewQ/components/LandingPage/CoachList/CoachCardModal.scss
+++ b/src/InterviewQ/components/LandingPage/CoachList/CoachCardModal.scss
@@ -119,7 +119,7 @@ body {
 			text-align: left;
 		
 			h3 {
-				max-width: 210px;
+				// max-width: 210px;
 				font-size: 2rem;
 				font-weight: 600;
 				font-style: normal;
